examples/test/testpolicy19843.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19843
  namespace: namespace298
spec:
  podSelector:
    matchLabels:
      key34: value7
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key10: value18
          key18: value12
          key35: value5
      podSelector:
        matchLabels:
          key37: value23
          key4: value48
          key48: value0
